--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
                   <span>Php</span>
                   <span>70%</span>
                 </div>
+                <div class="line bootstraps"></div>
               <div class="bars">
                 <div class="info">
                   <span>Java</span>
